--- a/po/be.po
+++ b/po/be.po
@@ -1,3 +1,4 @@
+# translation of yelp.HEAD.be.po to Belarusian
 # translation of yelp.HEAD.be.po to belarusian
 # translation of yelp.
 # Copyright (C) 2002,2003 Free Software Foundation, Inc.
@@ -6,10 +7,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp.HEAD.be\n"
-"POT-Creation-Date: 2003-04-07 19:16+0200\n"
-"PO-Revision-Date: 2003-02-07 01:54GMT+2\n"
+"POT-Creation-Date: 2003-05-19 05:03+0200\n"
+"PO-Revision-Date: 2003-05-19 15:45+0300\n"
 "Last-Translator: Vital Khilko <dojlid@mova.org>\n"
-"Language-Team: belarusian <i18n@mova.org>\n"
+"Language-Team: Belarusian <i18n@mova.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -57,7 +58,7 @@ msgstr "Фабрыка Yelp"
 
 #: src/yelp-main.c:94
 msgid "Define which cache dir to use"
-msgstr ""
+msgstr "Вызначэньне тэчкі кэшу для выкарыстаньня"
 
 #: src/yelp-main.c:128
 #, c-format
@@ -156,7 +157,7 @@ msgstr "Зьмест даведкі"
 
 #: src/yelp-view-toc.c:166
 msgid "GNOME - Desktop"
-msgstr "Асяродьдзе GNOME - Сталец"
+msgstr "Асяродзьдзе GNOME - Сталец"
 
 #: src/yelp-view-toc.c:167
 msgid "Additional documents"
@@ -184,7 +185,7 @@ msgstr "Старонкі кіраўніцтва"
 
 #: src/yelp-view-toc.c:712
 msgid "GNOME is"
-msgstr "Асяродьдзе GNOME зьяўляецца"
+msgstr "Асяродзьдзе GNOME зьяўляецца"
 
 #: src/yelp-view-toc.c:713
 msgid "Free Software"
@@ -204,7 +205,7 @@ msgstr "/Файл/_Стварыць акно"
 
 #: src/yelp-window.c:165
 msgid "/File/_Close window"
-msgstr "/Файл/_Зачыніць акно"
+msgstr "/Файл/_Закрыць акно"
 
 #: src/yelp-window.c:167
 msgid "/_Edit"
@@ -236,7 +237,7 @@ msgstr "/Пераход/У _пачатак"
 
 #: src/yelp-window.c:175
 msgid "/Go/_Index"
-msgstr "/Пераход/Да _зьместу"
+msgstr "/Пераход/Да _зьместа"
 
 #: src/yelp-window.c:177
 msgid "/_Help"
@@ -262,8 +263,8 @@ msgid "translator_credits"
 msgstr "Belarusian Language Linux Team <i18n@mova.org>"
 
 #: src/yelp-window.c:679
-msgid "Help Browser for GNOME 2.0"
-msgstr "Праграма прагляду даведкі для асяродьдзя GNOME 2.0"
+msgid "A Help Browser for GNOME"
+msgstr "Праграма прагляду даведкі для GNOME"
 
 #: src/yelp-window.c:788
 msgid "Back"
@@ -304,3 +305,4 @@ msgstr "Атрымаць дапамогу ў асяродьдзі GNOME"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "Дапамога"
+
