--- a/po/cy.po
+++ b/po/cy.po
@@ -1,14 +1,15 @@
-# GNOME yn Gymraeg.
-# Copyright (C) 2003 Free Software Foundation, Inc.
+# Yelp strings in Welsh
+# Copyright (C) 2003 Chris M. Jackson.
 # This file is distributed under the same license as the yelp package.
 # Chris M. Jackson <chris@www.linux.org.uk>
 #
+
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
 "POT-Creation-Date: 2003-05-25 12:54+0200\n"
-"PO-Revision-Date: 2003-05-25 20:17+0100\n"
-"Last-Translator: Dafydd Harries <daf@parnassus.ath.cx>\n"
+"PO-Revision-Date: 2003-05-27 00:00+0100\n"
+"Last-Translator: Chris M Jackson <chris@www.linux.org.uk>\n"
 "Language-Team: Welsh <gnome-cy@pengwyn.linux.org.uk>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,15 +21,15 @@ msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "<b>Find text in the document:</b>"
-msgstr "<b>Chwilio am destun yn y dogfen:</b>"
+msgstr "<b>Chwilio testun yn y dogfen:</b>"
 
 #: data/ui/yelp.glade.h:3
 msgid "Automatically _wrap around"
-msgstr "_Amlapio o gwmpas yn awtomatig"
+msgstr "_Amlapio'n Awtomatig"
 
 #: data/ui/yelp.glade.h:4
 msgid "Find text..."
-msgstr "Chwilio am destun..."
+msgstr "Chwilio testun..."
 
 #: data/ui/yelp.glade.h:5
 msgid "Match _entire word"
@@ -126,7 +127,7 @@ msgstr "Ffeiliau Ffurfweddu"
 
 #: src/yelp-man.c:449
 msgid "Games"
-msgstr "Gêmau"
+msgstr "Ge^mau"
 
 #: src/yelp-man.c:454
 msgid "Overviews"
@@ -163,7 +164,7 @@ msgstr "Dogfennau ychwanegol"
 
 #: src/yelp-view-toc.c:168 src/yelp-view-toc.c:493
 msgid "Manual Pages"
-msgstr "Tudalennau Lawlyfr"
+msgstr "Tudalennau'r Lawlyfr"
 
 #: src/yelp-view-toc.c:169 src/yelp-view-toc.c:549
 msgid "Info Pages"
@@ -211,7 +212,7 @@ msgstr "/_Golygu"
 
 #: src/yelp-window.c:168
 msgid "/Edit/_Find in page..."
-msgstr "/Golygu/_Chwilio mewn tudalen..."
+msgstr "/Golygu/_Chwilio ar tudalen..."
 
 #: src/yelp-window.c:169
 msgid "/Edit/_Find again"
@@ -223,11 +224,11 @@ msgstr "/_Mynd"
 
 #: src/yelp-window.c:172
 msgid "/Go/_Back"
-msgstr "/Mynd/Yn _ôl"
+msgstr "/Mynd/Yn _o^l"
 
 #: src/yelp-window.c:173
 msgid "/Go/_Forward"
-msgstr "/Mynd/_Ymlaen"
+msgstr "/Mynd/Y_mlaen"
 
 #: src/yelp-window.c:174
 msgid "/Go/_Home"
@@ -235,7 +236,7 @@ msgstr "/Mynd/_Adre"
 
 #: src/yelp-window.c:175
 msgid "/Go/_Index"
-msgstr "/Mynd/_Mynegai"
+msgstr "/Mynd/Myne_gai"
 
 #: src/yelp-window.c:177
 msgid "/_Help"
@@ -243,11 +244,11 @@ msgstr "/_Cymorth"
 
 #: src/yelp-window.c:178
 msgid "/Help/_About"
-msgstr "/Cymorth/_Ynghylch"
+msgstr "/Cymorth/_Am y rhaglen"
 
 #: src/yelp-window.c:238 src/yelp-window.c:438
 msgid "Help Browser"
-msgstr "Porwr Cymorth"
+msgstr "Porwr Help"
 
 #: src/yelp-window.c:351
 #, c-format
@@ -258,21 +259,20 @@ msgstr "Dydy'r ddogfen '%s' ddim yn bodoli"
 #. * will shop up in the "about" box
 #: src/yelp-window.c:675
 msgid "translator_credits"
-msgstr "Chris M. Jackson <chris@www.linux.org.uk>, "
-"Dafydd Harries <daf@parnassus.ath.cx>"
+msgstr "Chris M. Jackson <chris@www.linux.org.uk>"
 
 
 #: src/yelp-window.c:679
 msgid "A Help Browser for GNOME"
-msgstr "Porwr Cymorth ar gyfer GNOME"
+msgstr "Porwr Help i GNOME"
 
 #: src/yelp-window.c:788
 msgid "Back"
-msgstr "Yn ôl"
+msgstr "Yn o^l"
 
 #: src/yelp-window.c:789
 msgid "Show previous page in history"
-msgstr "Dangos y dudalen blaenorol"
+msgstr "Dangos y tudalen blaenorol"
 
 #: src/yelp-window.c:800
 msgid "Forward"
@@ -300,9 +300,8 @@ msgstr "Chwilio'r mynegai"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
-msgstr "Cael cymorth â GNOME"
+msgstr "Cael cymorth a^ GNOME"
 
 #: yelp.desktop.in.h:2
 msgid "Help"
-msgstr "Cymorth"
-
+msgstr "Help"
