--- a/po/is.po
+++ b/po/is.po
@@ -2,12 +2,12 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#Samúel Jón Gunnarsson  <sammi@techattack.nu>
+# Samúel Jón Gunnarsson  <sammi@techattack.nu>
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"POT-Creation-Date: 2003-06-07 08:47+0200\n"
-"PO-Revision-Date: 2003-06-07 08:50--100\n"
+"POT-Creation-Date: 2003-06-21 15:34+0200\n"
+"PO-Revision-Date: 2003-06-21 15:34--100\n"
 "Last-Translator: Samuel Jon Gunnarsson <sammi@techattack.nu>\n"
 "Language-Team: Icelandic <gnome@techattack.nu>\n"
 "MIME-Version: 1.0\n"
@@ -55,7 +55,7 @@ msgid "Yelp Factory"
 msgstr "Yelp Verksmiðjan"
 
 #: src/yelp-main.c:94
-msgid "Define which cache dir to use"
+msgid "Define which cache directory to use"
 msgstr "Skilgreindu möppu sem nota á sem skyndiminni"
 
 #: src/yelp-main.c:128
