--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-11  Pablo Saratxaga  <pablo@mandrakesoft.com>
+
+	* wa.po: Updated Walloon file
+
 2003-07-10 Hasbullah Bin Pit <sebol@ikhlas.com>
                                                                                  
         * ms.po: Updated Malay translation.
