--- a/po/wa.po
+++ b/po/wa.po
@@ -1,11 +1,13 @@
 # Copyright (C) 2001,2002 Free Software Foundation, Inc.
 # Pablo Saratxaga <srtxg@chanae.alphanet.ch>, 2001,2002.
+# Pablo Saratxaga <pablo@walon.org>, 2003.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp 0.6.99\n"
-"POT-Creation-Date: 2003-06-04 11:54+0200\n"
-"PO-Revision-Date: 2002-12-29 13:48+0100\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2003-07-11 05:20+0200\n"
+"PO-Revision-Date: 2003-07-11 10:44+0200\n"
 "Last-Translator: Pablo Saratxaga <pablo@mandrakesoft.com>\n"
 "Language-Team: Walon <linux-wa@chanae.stben.be>\n"
 "MIME-Version: 1.0\n"
@@ -34,7 +36,7 @@ msgstr "Èn cweri ki des mots _etirs"
 
 #: data/ui/yelp.glade.h:6
 msgid "_Match upper/lower case"
-msgstr "Diferince pitiès/grandès _letes"
+msgstr "Diferince pititès/grandès _letes"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Next"
@@ -53,8 +55,8 @@ msgid "Yelp Factory"
 msgstr "Oujhene Yelp"
 
 #: src/yelp-main.c:94
-msgid "Define which cache dir to use"
-msgstr ""
+msgid "Define which cache directory to use"
+msgstr "Defini li ridant a-z eployî pol muchete"
 
 #: src/yelp-main.c:128
 #, c-format
@@ -259,9 +261,8 @@ msgid "translator_credits"
 msgstr "Pablo Saratxaga <pablo@mandrakesoft.com>"
 
 #: src/yelp-window.c:681
-#, fuzzy
 msgid "A Help Browser for GNOME"
-msgstr "Foyteuse di l' aidance po Gnome 2.0"
+msgstr "Ene foyteuse d' aidance po Gnome"
 
 #: src/yelp-window.c:795
 msgid "Back"
