--- a/po/el.po
+++ b/po/el.po
@@ -1,21 +1,24 @@
+# translation of el.po to Greek
 # Greek translation of yelp.
 # Copyright (C) 2003 Free Software Foundation, Inc.
-# Simos Xenitellis <simos@hellug.gr>, 2002,2003
 #
 # 59 messages, 19Aug2002, started logging.
 # kostas:70 messages, 05Jan2003, updated translation for Gnome 2..1x
+# kostas:71 messages,13Jul2003, updated translation for 2.4
+# Simos Xenitellis <simos@hellug.gr>, 2002,2003
+# Kostas Papadimas <pkst@gmx.net>, 2003
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp 1.0.3\n"
-"POT-Creation-Date: 2003-06-04 11:54+0200\n"
-"PO-Revision-Date: 2003-01-05 11:48+0200\n"
+"Project-Id-Version: el\n"
+"POT-Creation-Date: 2003-07-13 18:41+0300\n"
+"PO-Revision-Date: 2003-07-13 18:43+0300\n"
 "Last-Translator: Kostas Papadimas <pkst@gmx.net>\n"
 "Language-Team: Greek <nls@tux.hellug.gr>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 0.9.6\n"
+"X-Generator: KBabel 1.0\n"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -59,8 +62,8 @@ msgid "Yelp Factory"
 msgstr "Εργοστάσιο Yelp"
 
 #: src/yelp-main.c:94
-msgid "Define which cache dir to use"
-msgstr ""
+msgid "Define which cache directory to use"
+msgstr "Ορισμός του καταλόγου λανθάνουσας μνήμης που θα χρησιμοποηθεί"
 
 #: src/yelp-main.c:128
 #, c-format
@@ -265,12 +268,13 @@ msgstr "Το έγγραφο '%s' δεν υπάρχει"
 #. * will shop up in the "about" box
 #: src/yelp-window.c:677
 msgid "translator_credits"
-msgstr "Συμεών (σίμος) Ξενιτέλλης <simos@hellug.gr>"
+msgstr ""
+"Συμεών (σίμος) Ξενιτέλλης <simos@hellug.gr> "
+"Κώστας Παπαδήμας <pkst@gmx.net>"
 
 #: src/yelp-window.c:681
-#, fuzzy
 msgid "A Help Browser for GNOME"
-msgstr "Πρόγραμμα Περιήγησης Βοήθειας για το GNOME 2.0"
+msgstr "Πρόγραμμα Περιήγησης Βοήθειας για το GNOME"
 
 #: src/yelp-window.c:795
 msgid "Back"
@@ -346,3 +350,4 @@ msgstr "Βοήθεια"
 #
 #~ msgid "Overview of contents"
 #~ msgstr "Επισκόπηση περιεχομένων"
+
