--- a/po/ja.po
+++ b/po/ja.po
@@ -1,15 +1,16 @@
 # Yelp ja.po.
 # Copyright (C) 2002-2003 Free Software Foundation, Inc.
 # This file is distributed under the same license as the Yelp package.
-# Takeshi Aihana <aihana@gnome.gr.jp>, 2002-2003.
+# Takeshi AIHANA <aihana@gnome.gr.jp>, 2002-2003.
 # KAMAGASAKO Masatoshi <emerald@gnome.gr.jp>, 203.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp HEAD\n"
-"POT-Creation-Date: 2003-06-04 11:54+0200\n"
-"PO-Revision-Date: 2003-05-08 23:08+0900\n"
-"Last-Translator: KAMAGASAKO Masatoshi <emerald@gnome.gr.jp>\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2003-07-21 02:19+0900\n"
+"PO-Revision-Date: 2003-07-21 02:16+0900\n"
+"Last-Translator: Takeshi AIHANA <aihana@gnome.gr.jp>\n"
 "Language-Team: Japanese <gnome-translation@gnome.gr.jp>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -56,13 +57,13 @@ msgid "Yelp Factory"
 msgstr "Yelp ファクトリ"
 
 #: src/yelp-main.c:94
-msgid "Define which cache dir to use"
+msgid "Define which cache directory to use"
 msgstr "使用するキャッシュ・フォルダを指定する"
 
 #: src/yelp-main.c:128
 #, c-format
 msgid "Could not activate Yelp: '%s'"
-msgstr "Yelp を活性化することが出来ませんでした: '%s'"
+msgstr "Yelp を活性化できませんでした: '%s'"
 
 #: src/yelp-main.c:147
 msgid "Could not open new window."
@@ -99,7 +100,7 @@ msgstr "PThreads (POSIX スレッド)"
 
 #: src/yelp-man.c:364
 msgid "System Calls"
-msgstr "システムコール (#2)"
+msgstr "システム・コール (#2)"
 
 #: src/yelp-man.c:369
 msgid "Library Functions"
@@ -301,7 +302,7 @@ msgstr "目次の中から検索します"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
-msgstr "GNOME 向けヘルプ・ブラウザ"
+msgstr "GNOME 向けのヘルプ・ブラウザです"
 
 #: yelp.desktop.in.h:2
 msgid "Help"
