--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-10  Francisco F. Serrador  <serrador@cvs.gnome.org>
+
+	* es.po: Updated Spanish translation.
+
 2003-12-09  Ole Laursen  <olau@hardworking.dk>
 
 	* da.po: Updated Danish translation.
