--- a/po/es.po
+++ b/po/es.po
@@ -1,16 +1,18 @@
+# translation of es.po to Spanish
 # translation of yelp.HEAD.po to Spanish
 # yelp spanish .po file.
 # Copyright (C) 2001,2003 Free Software Foundation, Inc.
 # Juan Manuel García Molina <juanma_gm@wanadoo.es>, 2001-2002,2003.
 # Francisco Javier F. Serrador <serrador@arrakis.es>, 2003.
+# Francisco Javier F. Serrador <franciscojavier.fernandez.serrador@hispalinux.es>, 2003.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp.HEAD\n"
+"Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2003-12-09 00:18-0600\n"
-"PO-Revision-Date: 2003-08-27 06:57+0200\n"
-"Last-Translator: Francisco Javier F. Serrador <serrador@arrakis.es>\n"
+"PO-Revision-Date: 2003-12-10 20:28+0100\n"
+"Last-Translator: Francisco Javier F. Serrador <franciscojavier.fernandez.serrador@hispalinux.es>\n"
 "Language-Team: Spanish <traductores@es.gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -22,87 +24,77 @@ msgid "Applications"
 msgstr "Aplicaciones"
 
 #: data/toc.xml.in.h:2
-#, fuzzy
 msgid "Desktop"
-msgstr "Escritorio GNOME"
+msgstr "Escritorio"
 
 #: data/toc.xml.in.h:3 src/yelp-man.c:434
 msgid "Development"
 msgstr "Desarrollo"
 
 #: data/toc.xml.in.h:4
-#, fuzzy
 msgid "Development Environments"
-msgstr "Desarrollo"
+msgstr "Entornos de desarrollo"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Tools"
-msgstr "Desarrollo"
+msgstr "Herramientas de desarrollo"
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Editors"
-msgstr "/_Editar"
+msgstr "Editores"
 
 #: data/toc.xml.in.h:7
-#, fuzzy
 msgid "Education Applications"
-msgstr "Aplicaciones"
+msgstr "Aplicaciones educativas"
 
 #: data/toc.xml.in.h:8
 msgid "Games and Entertainment"
-msgstr ""
+msgstr "Juegos y entretenimientos"
 
 #: data/toc.xml.in.h:9
 msgid "General"
-msgstr ""
+msgstr "General"
 
 #. GList           *seriesids;
 #: data/toc.xml.in.h:10 src/yelp-view-toc.c:165
 msgid "Help Contents"
-msgstr "Contenidos de la ayuda"
+msgstr "Contenido de la ayuda"
 
 #: data/toc.xml.in.h:11
-#, fuzzy
 msgid "Internet Applications"
-msgstr "Aplicaciones"
+msgstr "Aplicaciones de Internet"
 
 #: data/toc.xml.in.h:12
 msgid "KDE"
-msgstr ""
+msgstr "KDE"
 
 #: data/toc.xml.in.h:13
-#, fuzzy
 msgid "Kernels"
-msgstr "Rutinas del núcleo"
+msgstr "Núcleo"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "Aplicaciones"
+msgstr "Aplicaciones multimedia"
 
 #: data/toc.xml.in.h:15
 msgid "Office and Productivity Applications"
-msgstr ""
+msgstr "Oficina y aplicaciones de productividad"
 
 #: data/toc.xml.in.h:16
-#, fuzzy
 msgid "Scientific Applications"
-msgstr "Aplicaciones"
+msgstr "Aplicaciones científicas"
 
 #: data/toc.xml.in.h:17
 msgid "Securities"
-msgstr ""
+msgstr "Acciones"
 
 #: data/toc.xml.in.h:18
 msgid "Utilities"
-msgstr ""
+msgstr "Utilidades"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "X Applications"
-msgstr "Aplicaciones"
+msgstr "Aplicaciones X"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -146,21 +138,21 @@ msgstr "Fábrica Yelp"
 
 #: src/yelp-db-pager.c:238 src/yelp-window.c:730 src/yelp-window.c:817
 #: src/yelp-window.c:976
-#, fuzzy, c-format
+#, c-format
 msgid "The document '%s' could not be opened"
-msgstr "El documento «%s» no existe"
+msgstr "El documento «%s» no pudo abrirse"
 
 #: src/yelp-db-pager.c:404
 msgid "No href attribute found on yelp:document"
-msgstr ""
+msgstr "No se encontró atributo href en yelp:document"
 
 #: src/yelp-db-pager.c:419
 msgid "Out of memory"
-msgstr ""
+msgstr "Se agotó la memoria"
 
 #: src/yelp-db-pager.c:547
 msgid "Titlepage"
-msgstr ""
+msgstr "Página de título"
 
 #: src/yelp-db-pager.c:549
 msgid "Contents"
@@ -168,11 +160,11 @@ msgstr "Índice"
 
 #: src/yelp-db-pager.c:567
 msgid "Unknown"
-msgstr ""
+msgstr "Desconocido"
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
-msgstr "Define que directorio de cache utilizar"
+msgstr "Define qué directorio de caché utilizar"
 
 #: src/yelp-main.c:128
 #, c-format
@@ -245,22 +237,20 @@ msgid "System Administration"
 msgstr "Administración del sistema"
 
 #: src/yelp-pager.c:117
-#, fuzzy
 msgid "Document URI"
-msgstr "Documentos"
+msgstr "URI del documento"
 
 #: src/yelp-pager.c:118
 msgid "The URI of the document to be processed"
-msgstr ""
+msgstr "La URI del documento a ser procesado"
 
 #: src/yelp-toc-pager.c:229
 msgid "YelpTocPager: Pause count is negative."
-msgstr ""
+msgstr "YelpTocPager: El contador de pausa es negativo."
 
 #: src/yelp-toc-pager.c:567 src/yelp-toc-pager.c:579
-#, fuzzy
 msgid "The table of contents could not be read."
-msgstr "El documento «%s» no existe"
+msgstr "La tabla de contenidos no se pudo leer."
 
 #: src/yelp-toc-pager.c:780 src/yelp-view-toc.c:367 src/yelp-view-toc.c:493
 #: src/yelp-view-toc.c:741
@@ -405,36 +395,36 @@ msgstr "El documento «%s» no existe"
 
 #: src/yelp-window.c:655
 msgid "DocBook SGML documents are no longer supported."
-msgstr ""
+msgstr "Los documentos SGML DocBook SGML ya no se soportan."
 
 #: src/yelp-window.c:887
 msgid "Loading&nbsp;&nbsp;&nbsp;"
-msgstr ""
+msgstr "Cargando&nbsp;&nbsp;&nbsp;"
 
 #: src/yelp-window.c:891
 msgid "Loading.&nbsp;&nbsp;"
-msgstr ""
+msgstr "Cargando.&nbsp;&nbsp;"
 
 #: src/yelp-window.c:895
-#, fuzzy
 msgid "Loading..&nbsp;"
-msgstr "Cargando..."
+msgstr "Cargando..&nbsp;"
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
 #: src/yelp-window.c:1057
 msgid "translator_credits"
 msgstr ""
+"Francisco J.F. Serrador <serrador@cvs.gnome.org>\n"
 "Juan Manuel García Molina <juanma_gm@wanadoo.es>\n"
 "Germán Poo Caamaño <gpoo@ubiobio.cl>"
 
 #: src/yelp-window.c:1062
 msgid "A Help Browser for GNOME"
-msgstr "Navegador de ayuda para GNOME"
+msgstr "Visualizador de ayuda para GNOME"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
-msgstr "Obtener ayuda con GNOME"
+msgstr "Obtenga ayuda acerca de GNOME"
 
 #: yelp.desktop.in.h:2
 msgid "Help"
@@ -457,3 +447,4 @@ msgstr "Ayuda"
 
 #~ msgid "Search in the index"
 #~ msgstr "Buscar en el índice"
+
