--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-10  Tõivo Leedjärv  <toivo@linux.ee>
+
+	* et.po: Updated Estonian translation
+	by Priit Laes <amd@tt.ee>.
+
 2003-11-04  Nikos Charonitakis  <frolix68@yahoo.gr>
 
 	* el.po: Updated Greek translation.
