- Make the page titles work.
* src/yelp-db-pager.c:
- Make the page titles work.

* src/yelp-toc-pager.c:
- Emit a finish signal.

* stylesheets/db2html-chunk.xsl:
- Call yelp:document on the selected node, so we can use xml_get_title.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-12-13  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-db-pager.c:
+	- Make the page titles work.
+
+	* src/yelp-toc-pager.c:
+	- Emit a finish signal.
+
 2003-12-12  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-html-gtkhtml2.c:
